# nightscape

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  install.sh  si  si.pub
.github/workflows/: release.yml
aur-package/: .SRCINFO  PKGBUILD
src/: main.rs
