[package]
name = "nightscape"
version = "0.1.0"
edition = "2024"
authors = ["xhon4 ignaciolafuente451@gmail.com"]
description = "night sky in terminal"
license = "MIT"
repository = "https://github.com/xhon4/nightscape"

[dependencies]
crossterm = "0.27"
rand = "0.8"
signal-hook = "0.3"

[[bin]]
name = "nightscape"
path = "src/main.rs"
